--- a/brewTrip/brew_trips/templates/home.html
+++ b/brewTrip/brew_trips/templates/home.html
@@ -1,1 +1,7 @@
-<h1>Welcome Home</h1>
+{% extends 'base.html' %}
+
+{% block base %}
+
+<h1>Hello World from inside of books/templates/home.html</h1>
+
+{% endblock%}
