set up static files and login html page

--- a/brewTrip/accounts/templates/signup.html
+++ b/brewTrip/accounts/templates/signup.html
@@ -1,1 +1,13 @@
-<h1>Sign in here</h1>
+{% extends 'base.html' %}
+<!DOCTYPE html>
+{% load static %}
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>SignUp</title>
+    <link rel="stylesheet" href="{% static '/style.css' %}">
+  </head>
+  <body>
+
+  </body>
+</html>
