--- a/brewTrip/static/style.css
+++ b/brewTrip/static/style.css
@@ -1,4 +1,66 @@
 .topnav {
     background-color: lightgrey;
     overflow: hidden;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+
+    font-size: 20px;
+    /* font-family: 'IM Fell English SC', serif; */
+    /* font-family: 'IM Fell DW Pica', serif; */
+    font-family: 'Bellefair', serif;
+    padding: 10px;
+    text-align: center;
+    text-decoration: none;
+    border-bottom: 1px solid #ccc;
+    border-top: 1px solid #ccc;
+}
+
+.topnav a {
+  text-decoration: none;
+  padding: 8px;
+}
+
+.topnav a:hover {
+  background-color: ivory;
+}
+
+body {
+  background-image: url('./breweries.jpg')
+}
+
+.container {
+  position: relative;
+  display: block;
+  text-align: center;
+  width: 400px;
+  background-color: rgb(120,120,120,0.9);
+  margin: 20px;
+  padding: 20px;
+  font-family: 'IM Fell DW Pica', serif;
+  font-size: 20px;
+}
+
+.card-body {
+  background-color: rgb(190,190,190,0.4);
+}
+
+.plan {
+  display: flex;
+  justify-content:space-around;
+  flex-direction: column;
+  margin: 20px;
+}
+
+.plan-fields {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+
+  left: 20px;
+  margin: 10px;
+}
+
+.error {
+  color: red;
 }
