--- a/brew_trips/templates/home.html
+++ b/brew_trips/templates/home.html
@@ -12,13 +12,13 @@
       {%if breweries%}
       {% for brewery in breweries%}
       <div>
-        <div>
-          Added by {{brewery.brew_user}} on: {{brewery.prettify_datetime}}
-        </div>
         <div class="card-body">
           <h2>{{brewery.brewery_name}}</h2>
           <p>{{brewery.brewery_address}}</p>
           <a href="{{brewery.brewery_url}}">{{brewery.brewery_url}}</a>
+          <div>
+            Added on {{brewery.prettify_datetime}}
+          </div>
         </div>
       </div>
       {% endfor %}
