--- a/brew_trips/templates/brewMap.html
+++ b/brew_trips/templates/brewMap.html
@@ -9,25 +9,25 @@
 <div class="plan">
 {% if locations %}
 {%for location in locations%}
-<form action="{% url 'create' %}" method="POST">
+<form action="{% url 'brewmap' %}" method="POST">
   {% csrf_token %}
     <li >Name: <strong>{{location.name}}</strong></li>
     <input type="hidden" name="brewery_name"value="{{location.name}}" />
 
-    <!-- <p >Street: <strong>{{location.street}}</strong></p>
-    <input type="hidden" value="{{location.}}"name="{{location.street}}" /> -->
+    <p>Street: <strong>{{location.street}}</strong></p>
+    <!-- <input type="hidden" value="{{location.}}"name="{{location.street}}" />  -->
 
-    <p >City: <strong>{{location.city}}</strong></p>
-    <input type="hidden" name="brewery_address"value="{{location.city}}" />
+    <p>City: <strong>{{location.city}}</strong></p>
+    <!-- <input type="hidden" name="brewery_address"value="{{location.city}}" /> -->
 
-    <!-- <p >State: <strong>{{location.state}}</strong></p>
-    <input type="hidden" value="{{location.}}"name="{{location.state}}" /> -->
+    <p>State: <strong>{{location.state}}</strong></p>
+    <!-- <input type="hidden" value="{{location.}}"name="{{location.state}}" /> -->
 
-    <!-- <p >Zip: <strong>{{location.zip}}</strong></p>
-    <input type="hidden" value="{{location.}}"name="{{location.zip}}" /> -->
+    <p>Zip: <strong>{{location.zip}}</strong></p>
+    <input type="hidden" name="brewery_address" value="{{location.street}}" />
 
-    <!-- <p >Phone: <strong>{{location.phone}}</strong></p>
-    <input type="hidden" value="{{location.}}"name="{{location.phone}}" /> -->
+    <p>Phone: <strong>{{location.phone}}</strong></p>
+    <!-- <input type="hidden" value="{{location.}}"name="{{location.phone}}" /> --> -->
 
     <a href='{{location.url}}'>{{location.name}} website</a>
     <input type="hidden" name="brewery_url"value="{{location.url}}" />
