--- a/brew_trips/templates/create.html
+++ b/brew_trips/templates/create.html
@@ -11,6 +11,12 @@
 
 </head>
 
+<!-- <div class='brew-detail'>
+  <button id="postYourAdd" onclick="revealiframe()">OPEN</button>
+  <iframe id="iframe" data-src="{{location.reviewlink}}" src="about:blank" width="500" height="200" style="background:#ffffff"></iframe>
+</div> -->
+
+
 <form action='/save/' method="POST">
     <input id="city-search" type="text">Enter Your City </input>
     <input type="submit" value="Search">
