working city search provided by user

--- a/brew_trips/templates/home.html
+++ b/brew_trips/templates/home.html
@@ -11,10 +11,10 @@
   </head>
   <body>
 
-<form method='/save/'>
+<!-- <form method='/save/'>
     <input id="city-search" type="text">Enter Your City </input>
     <input type="submit" value="Search">
-</form>
+</form> -->
 
     <h2>Your BrewTrips</h2>
     <div class="breweries">
