--- a/static/style.css
+++ b/static/style.css
@@ -81,8 +81,11 @@ body {
 
 #display {
   position: absolute;
-  top: 0px;
-  right: -1000px;
-
+  top: -100px;
+  right: -800px;
   background-color: pink;
+}
+
+footer < p {
+  color: lightgrey;
 }
