--- a/static/style.css
+++ b/static/style.css
@@ -15,6 +15,8 @@
     border-top: 1px solid #ccc;
 }
 
+
+
 .topnav a {
   text-decoration: none;
   padding: 8px;
@@ -32,7 +34,7 @@ body {
   position: relative;
   display: block;
   text-align: center;
-  width: 800px;
+  width: 500px;
   background-color: rgb(120,120,120,0.9);
   margin: 20px;
   padding: 20px;
@@ -73,6 +75,7 @@ body {
   font-family: 'IM Fell DW Pica', serif;
   font-size: 15px;
   text-decoration: none;
+  align-self: center;
 }
 
 #url {
@@ -80,10 +83,9 @@ body {
 }
 
 #display {
-  position: absolute;
-  top: -100px;
-  right: -800px;
-  background-color: pink;
+  position: fixed;
+  right: -20%;
+  top: -30%;
 }
 
 footer < p {
