--- a/static/style.css
+++ b/static/style.css
@@ -15,8 +15,6 @@
     border-top: 1px solid #ccc;
 }
 
-
-
 .topnav a {
   text-decoration: none;
   padding: 8px;
@@ -30,11 +28,15 @@ body {
   background-image: url('./breweries.jpg')
 }
 
+.card-body {
+  background-color: rgb(190,190,190,0.4);
+}
+
 .container {
   position: relative;
   display: block;
   text-align: center;
-  width: 500px;
+  width: 400px;
   background-color: rgb(120,120,120,0.9);
   margin: 20px;
   padding: 20px;
@@ -42,8 +44,35 @@ body {
   font-size: 20px;
 }
 
-.card-body {
-  background-color: rgb(190,190,190,0.4);
+#display {
+  position: fixed;
+  right: -10%;
+  top: -17%;
+}
+
+.error {
+  color: red;
+}
+
+footer > * {
+  color: lightgrey;
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  bottom: 0;
+}
+
+.form-button {
+  width: 110px;
+  height: 45px;
+  background-color: lightgrey;
+  border-radius: 5%;
+  border: 1px solid black;
+  margin: 10px;
+  font-family: 'IM Fell DW Pica', serif;
+  font-size: 15px;
+  text-decoration: none;
+  align-self: center;
 }
 
 .plan {
@@ -61,33 +90,6 @@ body {
   margin: 10px;
 }
 
-.error {
-  color: red;
-}
-
-.form-button {
-  width: 110px;
-  height: 45px;
-  background-color: lightgrey;
-  border-radius: 5%;
-  border: 1px solid black;
-  margin: 10px;
-  font-family: 'IM Fell DW Pica', serif;
-  font-size: 15px;
-  text-decoration: none;
-  align-self: center;
-}
-
 #url {
   color: black;
-}
-
-#display {
-  position: fixed;
-  right: -20%;
-  top: -30%;
-}
-
-footer < p {
-  color: lightgrey;
 }
