--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -9,26 +9,33 @@
   </head>
   <body>
     {% block base %}
-    <div class="login">
-    {% if error %}
-      <h5 class="login">{{error}}</h5>
-      {%else%}
-      <h2 class="login-errors">Login Below</h2>
-      {%endif%}
-      <form class="login-page" action="{% url 'login'%}" method="POST">
-        {% csrf_token %}
-        <div class='username-password'>
-          Username:
-          <input class='username-password' type="text" name="username" required />
-        </div>
-        <div class='username-password'>
-          Password:
-          <input class='username-password' type="password" name="password" required />
-        </div>
-        <div>
-          <input class='username-password' type="submit" value="Login" />
-        </div>
-      </form>
+    <div class='outer'>
+      <div class="container-login">
+
+        {% if error %}
+        <h5>{{error}}</h5>
+        {%else%}
+        <h2>Login</h2>
+        {%endif%}
+        <form action="{% url 'login'%}" method="POST">
+
+          {% csrf_token %}
+          <div class='username-password'>
+            Username:
+            <input class='username-password' type="text" name="username" required />
+          </div>
+
+          <div class='username-password'>
+            Password:
+            <input class='username-password' type="password" name="password" required />
+          </div>
+
+          <div>
+            <input class="form-button" type="submit" value="Login" />
+          </div>
+
+        </form>
+      </div>
     </div>
   </body>
 </html>
