--- a/brew_trips/templates/home.html
+++ b/brew_trips/templates/home.html
@@ -11,10 +11,6 @@
   </head>
   <body>
 
-<!-- <form method='/save/'>
-    <input id="city-search" type="text">Enter Your City </input>
-    <input type="submit" value="Search">
-</form> -->
 
     <h2>Your BrewTrips</h2>
     <div class="breweries">
@@ -41,7 +37,7 @@
       </div>
       {% endfor %}
       {%else%}
-      <h2 class='breweries'>No breweries added</h2>
+      <h2 class='breweries'>Add some breweries!</h2>
       {%endif%}
     </div>
 
