--- a/static/style.css
+++ b/static/style.css
@@ -44,6 +44,29 @@ body {
   font-size: 20px;
 }
 
+.container-login {
+  position: relative;
+  display:inline-block;
+  text-align: center;
+  width: 600px;
+  background-color: rgb(120,120,120,0.9);
+  margin: 30px;
+  padding: 30px;
+  font-family: 'IM Fell DW Pica', serif;
+  font-size: 35px;
+  align-self: center;
+}
+
+.outer {
+  display: flex;
+  justify-content: center;
+}
+
+.username-password {
+  height: 20px;
+  margin-bottom: 20px;
+}
+
 #display {
   position: fixed;
   right: -10%;
@@ -91,6 +114,18 @@ footer > * {
   left: 20px;
   margin: 10px;
 }
+
+.signup {
+  align-self: center;
+  display: flex;
+  width: 400px;
+  flex-direction: column;
+  justify-content: center;
+  margin: 20px;
+  font-size: 30px;
+}
+
+
 
 #url {
   color: black;
