trying to get city to display

--- a/accounts/templates/signup.html
+++ b/accounts/templates/signup.html
@@ -12,7 +12,7 @@
 
 <body>
   {% block base %}
-  <div class="signup">
+  <div class="container-login">
     {% if registered %}
 
     <div class="jumbotron">
