--- a/brew_trips/templates/brewapi.html
+++ b/brew_trips/templates/brewapi.html
@@ -15,22 +15,19 @@
   <div class="container">
     <form method="GET">
       {% csrf_token %}
-      <input type="text" name="city-search" placeholder="City,ST">
+      <input id='foo' type="text" name="city-search" placeholder="City,ST">
       <button id='findcity'class='form-button' type="submit"> City to Search</button>
     </form>
-
 
     <iframe id="display" width="1250" height="1500" frameBorder="0" style="-webkit-transform:scale(0.7);-moz-transform-scale(0.5);"></iframe>
     <div class="plan">
 
-      <h2 id='city-display'>Test</h2>
-
       {% if locations %}
-
+      <h2>Searching in: {{locations.0.city}}, {{locations.0.state}}</h2>
       {%for location in locations%}
-      <form action="{% url 'brewapi' %}" method="POST">
+      <form id="my-form" action="{% url 'brewapi' %}" method="POST">
         {% csrf_token %}
-        <!-- <p class='brewery-name'><strong>{{location.name}}</strong></p>
+        <p class='brewery-name'><strong>{{location.name}}</strong></p>
         <input type="hidden" name="brewery_name" value="{{location.name}}" />
 
         <p>Address: {{location.street}}</p>
@@ -46,8 +43,8 @@
 
         <div>
           <input class="form-button" type="submit" value="Add Brewery" />
-        </div> -->
-        {{form.as_p}}
+        </div>
+
       </form>
 
       <!-- http://jsfiddle.net/kbwood/DLprk/ -->
