--- a/brew_trips/templates/brewapi.html
+++ b/brew_trips/templates/brewapi.html
@@ -35,6 +35,7 @@
         <p>{{location.city}}, {{location.state}} {{location.zip}}</p>
 
         <input type="hidden" name="brewery_address" value="{{location.street}} {{location.city}}, {{location.state}} {{location.zip}}" />
+        <input type="hidden" name="brewery_city" value="{{location.city}}" />
 
         <p>Phone: {{location.phone}}</p>
 
