--- a/brew_trips/templates/brewMap.html
+++ b/brew_trips/templates/brewMap.html
@@ -10,31 +10,38 @@
   <script src="{% static 'js/cityForm.js' %}"></script>
 </head>
 <body>
-  <div class="plan">
+  <div class="container">
 
+    <h3>{{title}}</h3>
+
+    <h2>{{breweries.brewery_city}}</h2>
 
     {% if breweries %}
 
     {%for brewery in breweries%}
-    <form action="{% url 'brewmap' %}" method="POST">
-      {% csrf_token %}
-      <p><strong>{{brewery.name}}</strong></p>
 
-      <p>Address: {{brewery.street}}</p>
+      <p><strong>{{brewery.brewery_name}}</strong></p>
 
-      <p>{{brewery.city}}, {{brewery.state}} {{brewery.zip}}</p>
+      <p>Address: {{brewery.brewery_address}}</p>
 
+      <h2>{{brewery.brewery_city}}</h2>
 
-      <p>Phone: {{brewery.phone}}</p>
-
-      <a href='{{brewery.url}}'>{{brewery.name}} website</a>
+      <a href='{{brewery.url}}'>{{brewery.brewery_url}} website</a>
 
       <hr>
-    </form>
 
-    <!-- http://jsfiddle.net/kbwood/DLprk/ -->
-    <input type="text" id="url" value="{{location.reviewlink}}">
-    <button width="500" height="200" type="button" id="load">Show Brewery Details</button>
+      
+      <a href="javascript:{document.getElementById('update-{{brewery.id}}').submit()}">
+      {{brewery.favorite_brewery}} Favorite</a>
+
+      <form id="update-{{brewery.id}}" action="{% url 'update' brewery.id %}" method="POST">
+        {% csrf_token %}
+        <input type="hidden" />
+      </form>
+
+    <a href="javascript:{document.getElementById('delete-{{brewery.id}}').submit()}" >
+    <button class="form-button">Remove Brewery</button>
+    </a>
 
     <form id="delete-{{brewery.id}}" action="{% url 'delete' brewery.id %}" method="POST">
       {%csrf_token%}
@@ -43,7 +50,8 @@
 
     {% endfor%}
     {%else%}
-    <h3> No breweries here!v</h3>
+
+    <h3> No breweries here!</h3>
     {% endif %}
   </div>
   </body>
