--- a/brew_trips/templates/home.html
+++ b/brew_trips/templates/home.html
@@ -8,6 +8,7 @@
     <title>Your Trips</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
      <script src="{% static 'js/cityForm.js' %}"></script>
+     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
   </head>
   <body>
     <div class='outer'>
@@ -33,17 +34,22 @@
                 <button class="form-button">Remove Brewery</button>
                 </a>
 
+                <a class='form-button' id="favorite" value="{{brewery.favorite_brewery}}" href="javascript:{document.getElementById('update-{{brewery.id}}').submit()}">
+                  {%if brewery.favorite_brewery is True%}<i class="far fa-star"></i>
+                  {%else%}
+                  <p>Favorite?</p>
+                  {%endif%}</a>
 
-
+                <form id="update-{{brewery.id}}" action="{% url 'update' brewery.id %}" method="POST">
+                  {% csrf_token %}
+                  <!-- <input type="hidden" /> -->
+                </form>
 
 
                 <form id="delete-{{brewery.id}}" action="{% url 'delete' brewery.id %}" method="POST">
                   {%csrf_token%}
                   <input type="hidden"/>
                 </form>
-
-                
-
 
 
               </div>
