--- a/static/style.css
+++ b/static/style.css
@@ -24,6 +24,10 @@
   background-color: ivory;
 }
 
+a {
+  text-decoration:none;
+}
+
 body {
   background-image: url('./breweries.jpg')
 }
@@ -36,7 +40,7 @@ body {
   position: relative;
   display: block;
   text-align: center;
-  width: 600px;
+  width: 400px;
   background-color: rgb(120,120,120,0.9);
   margin: 20px;
   padding: 20px;
