--- a/brew_trips/templates/home.html
+++ b/brew_trips/templates/home.html
@@ -14,8 +14,8 @@
     <div class='outer'>
 
       <div class="container">
-        {{title}}
-        <h2>Your BrewTrips</h2>
+        <h2>{{title}}, welcome to your BrewTrips</h2>
+
 
         {% if user.is_authenticated %}
 
@@ -34,15 +34,14 @@
                 <button class="form-button">Remove Brewery</button>
                 </a>
 
-                <a class='form-button' id="favorite" value="{{brewery.favorite_brewery}}" href="javascript:{document.getElementById('update-{{brewery.id}}').submit()}">
-                  {%if brewery.favorite_brewery is True%}<i class="far fa-star"></i>
-                  {%else%}
-                  <p>Favorite?</p>
+                <a id="favorite" href="javascript:{document.getElementById('update-{{brewery.id}}').submit()}">
+                  {%if brewery.favorite_brewery is True%}<i class="far fa-star fa-2x"></i>
+                  {%else%}<p>Favorite?</p>
                   {%endif%}</a>
 
                 <form id="update-{{brewery.id}}" action="{% url 'update' brewery.id %}" method="POST">
                   {% csrf_token %}
-                  <!-- <input type="hidden" /> -->
+                  <input type="hidden" />
                 </form>
 
 
