--- a/static/style.css
+++ b/static/style.css
@@ -78,7 +78,7 @@ body {
 #display {
   position: fixed;
   right: -10%;
-  top: -17%;
+  top: -18%;
 }
 
 .error {
@@ -98,6 +98,19 @@ footer > * {
 }
 
 .form-button {
+  width: 110px;
+  height: 45px;
+  background-color: lightgrey;
+  border-radius: 5%;
+  border: 1px solid black;
+  margin: 10px;
+  font-family: 'IM Fell DW Pica', serif;
+  font-size: 15px;
+  text-decoration: none;
+  align-self: center;
+}
+
+.form-button-map {
   width: 110px;
   height: 45px;
   background-color: lightgrey;
