--- a/brew_trips/templates/favorites.html
+++ b/brew_trips/templates/favorites.html
@@ -13,7 +13,7 @@
 <body>
   <div class="container">
 
-    <h3>{{title}}</h3>
+    <h3>Your Favorite Breweries</h3>
 
     <h2>{{breweries.brewery_city}}</h2>
 
